--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -80,7 +80,7 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor
-executor = SequentialExecutor
+executor = LocalExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
@@ -107,20 +107,20 @@ sql_alchemy_reconnect_timeout = 300
 # The amount of parallelism as a setting to the executor. This defines
 # the max number of task instances that should run simultaneously
 # on this airflow installation
-parallelism = 32
+parallelism = 10000
 
 # The number of task instances allowed to run concurrently by the scheduler
-dag_concurrency = 16
+dag_concurrency = 10000
 
 # Are DAGs paused by default at creation
 dags_are_paused_at_creation = True
 
 # When not using pools, tasks are run in the "default pool",
 # whose size is guided by this config element
-non_pooled_task_slot_count = 128
+non_pooled_task_slot_count = 10000
 
 # The maximum number of active DAG runs per DAG
-max_active_runs_per_dag = 16
+max_active_runs_per_dag = 10000
 
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
